--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.18",
+    "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.8.2",
     "file-saver": "^2.0.5",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
